# aclman

./: .gitignore  README.md  aclman.py  models.py  pyproject.toml  setup.cfg
aclman/: aclman.py  cli.py  helpers.py  models.py
aclman/api/: grouper.py  mrbs.py  s3.py  skylab.py  zoho.py
aclman/config/: development.py  production.py  secrets.example.py
aclman/secrets/: example.py
config/: config.development.yaml  config.production.yaml  secrets.example.py  secrets.example.yaml
data/: sections.csv
src/aclman/: __main__.py  cli.py  config_handler.py  helpers.py  models.py
src/aclman/api/: bioraft.py  grouper.py  ldap.py  mrbs.py  s3.py  skylab.py  zoho.py
src/aclman/config/: development.py  production.py
src/aclman/setup/: zoho.py
src/aclman/user_check/: __main__.py  bioraft_trainings.py  enrollment.py  laser_groups.py
src/data/: sections.csv
